 4. Only call 'Slim::Schema::Album->releaseTypes' for LMS 8.4 or newer.
 5. When adding/playing all discs of multi-disc set use album_id.
 6. In album style queue, group albums by disc number.
 7. Fix missing add/play hover buttons on tracks in browse view.
 8. Fix swipe to change track.
 9. Set default queue transfer method to 'Move'.
10. Fix toggle queue icon when using coloured toolbars.

4.0.2
-----
 1. Respect LMS's setting to not group by release type.
 2. Add jumplist support when showing multiple release types.
 3. Don't highlight active jumplist item.
 4. Remove option for letter overlay whilst scrolling.
 5. Fix reading some LMS prefs where LMS returns '?'.
 6. Only request artist_ids when searching if LMS 8.4 or newer.
 7. Allow user-supplied backdrops, by placing into
    prefs/material-skin/backdrops
 8. Query LMS for release type names.
 9. Fix play button showing in mobile layout when no tracks in queue.
10. Remove link to user guide, its out of date.
11. Adjust volume with arrow keys, if control has focus.
12. 'Pulse' now-playing cover menu button if cover clicked.
13. Add native callback for titlebar and window control buttons, mainly for
    use in next version of Melodeon.
14. When using album style highlight all tracks of current album.
15. Clear queue selection when activate certain menu items.
16. Show menu buttons for tracks in browse and queue views when some are
    selected.
17. Remove hack to place 'Manage plugins' first in list, as LMS 8.4 now has a
    proper fix for this.
18. Fix browse toolbar if have selection.

4.0.1
-----
 1. Fix highlighting jumplist letter when jumping/scrolling lists.
 2. Re-add placing song info into window title.
 3. Move screensaver text every 5 minutes.
 4. Increase now-playing cover menu button opacity.
 5. Revert to previous String.replaceAll polyfill, fixes rendering issues.
 6. Fix text position when using thick mobile now-playing bar on iOS.
 7. Fix 'undefined' appearing in 'Artist' MAI section.